--- a/MachineCalculator/Views/AppDatas/Create.cshtml
+++ b/MachineCalculator/Views/AppDatas/Create.cshtml
@@ -13,16 +13,6 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="RAM" class="control-label"></label>
-                <input asp-for="RAM" class="form-control" />
-                <span asp-validation-for="RAM" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CPU" class="control-label"></label>
-                <input asp-for="CPU" class="form-control" />
-                <span asp-validation-for="CPU" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="name" class="control-label"></label>
                 <input asp-for="name" class="form-control" />
                 <span asp-validation-for="name" class="text-danger"></span>
@@ -39,6 +29,16 @@
                     </label>
                 </div>
             </div>
+
+            @foreach (var subitem in Model.resourses)
+            {
+                <div class="form-group">
+                    <label asp-for=@subitem.name class="control-label"></label>
+                    <input asp-for=@subitem.load class="form-control" />
+                    <span asp-validation-for=@subitem.name class="text-danger"></span>
+                </div>
+            }
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
