--- a/MachineCalculator/Views/AppDatas/Delete.cshtml
+++ b/MachineCalculator/Views/AppDatas/Delete.cshtml
@@ -12,35 +12,32 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.RAM)
+            @Html.DisplayNameFor(modelItem => Model.name)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.RAM)
+            @Html.DisplayFor(modelItem => Model.name)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.CPU)
+            @Html.DisplayNameFor(modelItem => Model.instances)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.CPU)
+            @Html.DisplayFor(modelItem => Model.instances)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.name)
+            @Html.DisplayNameFor(modelItem => Model.flag)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.name)
+            @Html.DisplayFor(modelItem => Model.flag)
         </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.instances)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.instances)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.flag)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.flag)
-        </dd>
+        @foreach (var subitem in Model.resourses)
+        {
+            <dt>
+                @Html.DisplayFor(modelItem => subitem.name)
+            </dt>
+            <dd>
+                @Html.DisplayFor(subModelItem => subitem.load)
+            </dd>
+        }
     </dl>
     
     <form asp-action="Delete">
