все кроме независимой структуры параметров

--- a/MachineCalculator/Views/AppDatas/Create.cshtml
+++ b/MachineCalculator/Views/AppDatas/Create.cshtml
@@ -5,9 +5,15 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Create</h2>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+</head>
 
-<h4>AppData</h4>
+<h2>Create new application</h2>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
