--- a/MachineCalculator/Views/AppDatas/Delete.cshtml
+++ b/MachineCalculator/Views/AppDatas/Delete.cshtml
@@ -4,9 +4,16 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Delete</h2>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+</head>
 
-<h3>Are you sure you want to delete this?</h3>
+<h2>Delete application</h2>
+
+<h3>Are you sure you want to delete this application?</h3>
 <div>
     <h4>AppData</h4>
     <hr />
@@ -37,6 +44,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index" style="font-size: 12pt ; font-weight:600">Back to List</a>
     </form>
 </div>
