--- a/MachineCalculator/Views/AppDatas/Edit.cshtml
+++ b/MachineCalculator/Views/AppDatas/Edit.cshtml
@@ -1,16 +1,19 @@
 ﻿@model MachineCalculator.Models.AppObj
-@using (Html.BeginForm())
-{
-    @Html.EditorFor(o => o.AppParameters)
-}
+
 
 @{
         ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+</head>
 
-<h4>AppData</h4>
+<h2>Edit application</h2>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -24,21 +27,22 @@
             <div class="form-group">
                 <div class="checkbox">
                     <label>
-                        @Html.DisplayNameFor(model => model.flag)<input asp-for="flag" />
+                        @Html.DisplayNameFor(model => model.flag)
+                        <input asp-for="flag" />
                     </label>
                 </div>
             </div>
 
             @for (int i = 0; i < Model.AppParameters.Count; i++)
             {
-            <div class="form-group">
-                @Html.DisplayFor(modelItem => Model.AppParameters[i].name)
-                @Html.HiddenFor(o => o.AppParameters[i].name, new { name = Model.AppParameters[i].name })               
-                <input asp-for="AppParameters[i].load" />
-                <span asp-validation-for=@Model.AppParameters[i].name class="text-danger"></span>
-            </div>
+                <div class="form-group">
+                    @Html.DisplayFor(modelItem => Model.AppParameters[i].name)
+                    @Html.HiddenFor(o => o.AppParameters[i].name, new { name = Model.AppParameters[i].name })
+                    <input asp-for="AppParameters[i].load" />
+                    <span asp-validation-for=@Model.AppParameters[i].load class="text-danger"></span>
+                </div>
             }
-
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
@@ -47,7 +51,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" style="font-size: 12pt ; font-weight:600">Back to List</a>
 </div>
 
 @section Scripts {
