--- a/MachineCalculator/Views/Projects/Create.cshtml
+++ b/MachineCalculator/Views/Projects/Create.cshtml
@@ -41,7 +41,7 @@
     </div>
 </div>
 
-<a asp-action="Index">Back to List</a>
+<a asp-action="Index" style="font-size: 12pt ; font-weight:600">Back to List</a>
 
 
 
