--- a/MachineCalculator/Views/Projects/Edit.cshtml
+++ b/MachineCalculator/Views/Projects/Edit.cshtml
@@ -4,9 +4,16 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+</head>
 
-<h4>Project</h4>
+
+<h2>Edit project</h2>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -31,7 +38,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" style="font-size: 12pt ; font-weight:600">Back to List</a>
 </div>
 
 @section Scripts {
